# streamlit-command-palette

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  testpypi.yml
examples/: actions.py  basic.py  dataframe.py
examples/multipage/: Home.py  palette.py
examples/multipage/pages/: 1_Analytics.py  2_Settings.py
scripts/: validate_classifiers.py
src/streamlit_command_palette/: __init__.py  _component.py  _schema.py  pyproject.toml
src/streamlit_command_palette/frontend/: package.json  tsconfig.json  vite.config.ts
src/streamlit_command_palette/frontend/src/: index.ts
tests/: test_component.py  test_schema.py
